Display CustomerMarket products Add total rating to Product model Add bankAccount validation for publishing product Add address validation for customer and seller

--- a/src/main/webapp/css/productCard.css
+++ b/src/main/webapp/css/productCard.css
@@ -11,6 +11,10 @@ a.stretched-link:before {
     width: 100%;
 }
 
+.star-icon{
+    font-size: 20px;
+    margin-right: 5px;
+}
 
 .card-footer{
     position: relative;
