--- a/src/main/webapp/css/customerCart.css
+++ b/src/main/webapp/css/customerCart.css
@@ -1,3 +1,28 @@
-main{
+html,
+body {
+    height: 100%;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     margin-top: 5rem;
+}
+
+.cart-items {
+    flex: 1;
+    overflow-y: auto;
+    margin-bottom: 60px; /* Adjust the margin to leave space for the button */
+}
+
+.checkout-button {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.1);
 }
